test/files/neg/macro-nontypeablebody.check
Macros_Test_2.scala:3: error: value foo2 is not a member of object Impls
  def foo(x: Any) = macro Impls.foo2
                                ^
one error found
